Update trying out new html

--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello Coursera!</title>
+	<title>The tab's title is put here.</title>
 </head>
 <body>
-<h1>Hello Coursera! It's a beautiful day, isn't it? :-)</h1>
+<h1>Yo yo YO! What up, peeps?! It's a beautiful day, isn't it? :-)</h1>
+<div>I'm just trying this out to make sure I've got it.</div>
+<div>Let's try a div and then a <span>span right here...</span> &lt; I just did a span right there</div>
+<span>and a less than sign right next to it.</span>
+<div>Here's an ampersand (I think that's how it's spelled!) --&gt; &amp; ...I actually did a greater than sign too. :-)</div>
 </body>
 </html>
